# Oshak.kz

./: pyproject.toml
alembic/: env.py
app/: database.py  main.py  models.py  repositories.py  sql_app.db
